--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "plotly.js": "^2.25.1",
     "plotly.js-basic-dist": "^2.25.1",
     "react": "^18.2.0",
